my work for the day

--- a/python_data_structure_manipulation_exercises.py.ipynb
+++ b/python_data_structure_manipulation_exercises.py.ipynb
@@ -19,15 +19,15 @@
     "\n",
     "\n",
     "\n",
-    "# How many students are in web development? data science?\n",
-    "# What is the average number of pets for students in web development?\n",
-    "# What is the average pet age for students in data science?\n",
-    "# What is most frequent coffee preference for data science students?\n",
-    "# What is the least frequent coffee preference for web development students?\n",
-    "# What is the average grade for students with at least 2 pets?\n",
-    "# How many students have 3 pets?\n",
-    "# What is the average grade for students with 0 pets?\n",
-    "# What is the average grade for web development students? data science students?\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "# What is the average grade range (i.e. highest grade - lowest grade) for dark coffee drinkers?\n",
     "# What is the average number of pets for medium coffee drinkers?\n",
     "# What is the most common type of pet for web development students?\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "id": "e99e6c76",
    "metadata": {},
    "outputs": [],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "id": "98755a79",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Ada Lovelace': ['horse'], 'Thomas Bayes': [], 'Marie Curie': ['cat'], 'Grace Hopper': ['dog', 'cat'], 'Alan Turing': ['horse', 'horse', 'dog'], 'Rosalind Franklin': [], 'Elizabeth Blackwell': ['cat'], 'Rene Descartes': ['cat', 'cat'], 'Ahmed Zewail': ['cat', 'cat'], 'Chien-Shiung Wu': ['cat'], 'William Sanford Nye': ['cat', 'cat'], 'Carl Sagan': ['cat'], 'Jane Goodall': ['horse'], 'Richard Feynman': ['dog']}\n"
+      "the student Ada Lovelace has 1 pet(s)\n",
+      "\n",
+      "\n",
+      "the student Thomas Bayes has 0 pet(s)\n",
+      "\n",
+      "\n",
+      "the student Marie Curie has 1 pet(s)\n",
+      "\n",
+      "\n",
+      "the student Grace Hopper has 2 pet(s)\n",
+      "\n",
+      "\n",
+      "the student Alan Turing has 3 pet(s)\n",
+      "\n",
+      "\n",
+      "the student Rosalind Franklin has 0 pet(s)\n",
+      "\n",
+      "\n",
+      "the student Elizabeth Blackwell has 1 pet(s)\n",
+      "\n",
+      "\n",
+      "the student Rene Descartes has 2 pet(s)\n",
+      "\n",
+      "\n",
+      "the student Ahmed Zewail has 2 pet(s)\n",
+      "\n",
+      "\n",
+      "the student Chien-Shiung Wu has 1 pet(s)\n",
+      "\n",
+      "\n",
+      "the student William Sanford Nye has 2 pet(s)\n",
+      "\n",
+      "\n",
+      "the student Carl Sagan has 1 pet(s)\n",
+      "\n",
+      "\n",
+      "the student Jane Goodall has 1 pet(s)\n",
+      "\n",
+      "\n",
+      "the student Richard Feynman has 1 pet(s)\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -397,23 +438,345 @@
     "# How many pets does each student have?\n",
     "the_students_pets = {}\n",
     "list_of_pets = []\n",
-    "\n",
+    "number_pets_dict = {}\n",
     "\n",
     "for i in students:\n",
     "    for j in i['pets']:\n",
     "        list_of_pets.append(j[\"species\"])\n",
+    "    \n",
     "        \n",
     "    the_students_pets[i[\"student\"]] = list_of_pets \n",
     "    list_of_pets = []\n",
-    "print(the_students_pets)\n",
+    "    \n",
+    "for name,pet_list in the_students_pets.items():\n",
+    "    number_pets_dict[name] = len(pet_list)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "\n",
+    "\n",
+    "for name, pet_number in number_pets_dict.items():\n",
+    "    print('the student', name, 'has', pet_number, 'pet(s)\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e655f1f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there are 7 students in web development\n",
+      "and 7 students in data science\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How many students are in web development? data science?\n",
+    "the_dict = {'web development':0, 'data science':0}\n",
+    "for i in students:\n",
+    "   \n",
+    "    if i[\"course\"] == 'web development':\n",
+    "        the_dict['web development'] +=1\n",
+    "    elif i[\"course\"] == 'data science':\n",
+    "        the_dict['data science'] +=1\n",
     "        \n",
+    "        \n",
+    "print('there are', the_dict['web development'], 'students in web development\\nand',\n",
+    "      the_dict['web development'],'students in data science')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "1218a0e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the average number of pets for students in web development is 1.29\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What is the average number of pets for students in web development?\n",
+    "\n",
+    "web_total_students = 0\n",
+    "data_total_students = 0\n",
+    "total_pets_web = 0\n",
+    "total_pets_data = 0\n",
+    "web_student_list = []\n",
+    "\n",
+    "for i in students:\n",
+    "    if i[\"course\"] == 'web development':\n",
+    "        web_student_list.append(i['student'])\n",
+    "        web_total_students +=1\n",
+    "        total_pets_web += number_pets_dict[i['student']]\n",
+    "    elif i[\"course\"] == 'data science':\n",
+    "        data_total_students +=1\n",
+    "        total_pets_data += number_pets_dict[i['student']]\n",
+    "        \n",
+    "print('the average number of pets for students in web development is', round(total_pets_web / web_total_students,2))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "284db078",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average pet age for students in data science is 5.44\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What is the average pet age for students in data science?\n",
+    "pet_age = 0\n",
+    "count = 0\n",
+    "for i in students:\n",
+    "    if i[\"course\"] == 'data science':\n",
+    "        for j in i[\"pets\"]:\n",
+    "            \n",
+    "            count += 1\n",
+    "            pet_age += j['age']\n",
+    "print('The average pet age for students in data science is', round(pet_age / count,2))\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 78,
+   "id": "8f222b33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'medium': 4, 'dark': 3}\n",
+      "the most frequent coffee preference is medium at 4 students\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What is most frequent coffee preference for data science students?\n",
+    "the_dict_for_coffee = {'medium':0,'dark':0}\n",
+    "\n",
+    "\n",
+    "for i in students:\n",
+    "    if i[\"course\"] == 'data science':\n",
+    "        the_dict_for_coffee[i[\"coffee_preference\"]] +=1\n",
+    "print(the_dict_for_coffee)\n",
+    "\n",
+    "print('the most frequent coffee preference is medium at 4 students')\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "6757d525",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'medium': 2, 'dark': 2, 'light': 3}\n",
+      "the tie for least frequent coffee preference is medium and dark coffee\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What is the least frequent coffee preference for web development students?\n",
+    "the_dict_for_coffee = {'medium':0,'dark':0,\"light\":0}\n",
+    "\n",
+    "\n",
+    "for i in students:\n",
+    "    if i[\"course\"] == 'web development':\n",
+    "        the_dict_for_coffee[i[\"coffee_preference\"]] +=1\n",
+    "print(the_dict_for_coffee)\n",
+    "\n",
+    "print('the tie for least frequent coffee preference is medium and dark coffee')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "6184d76f",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[78.5, 81.5, 88.75, 88.75, 81.5]\n",
+      "the average grade for students with at least two pets is 83.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What is the average grade for students with at least 2 pets?\n",
+    "grade_sum_list = []\n",
+    "student_amount = 0\n",
+    "total = 0\n",
+    "average_grade = 0\n",
+    "for i in students:\n",
+    "    if len(i[\"pets\"]) >= 2:\n",
+    "        student_amount += 1\n",
+    "        for j in i[\"grades\"]:\n",
+    "            total += j\n",
+    "            \n",
+    "        average_grade = total / 4\n",
+    "        \n",
+    "        grade_sum_list.append(average_grade)\n",
+    "        average_grade = 0\n",
+    "        total = 0\n",
+    "\n",
+    "\n",
+    "total = 0\n",
+    "print(grade_sum_list)\n",
+    "for i in grade_sum_list:\n",
+    "    total += i\n",
+    "    \n",
+    "print('the average grade for students with at least two pets is',total / len(grade_sum_list))\n",
+    "    \n",
+    "        \n",
+    "\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "994ec577",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there is 1 student(s) that have three pets\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How many students have 3 pets?\n",
+    "count = 0\n",
+    "for i in students:\n",
+    "    if len(i[\"pets\"]) == 3:\n",
+    "        count+= 1\n",
+    "        \n",
+    "print('there is', count, 'student(s) that have three pets')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "e530adef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What is the average grade for students with 0 pets?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "b8121fb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[83.5, 80.75]\n",
+      "the average grade for students with zero pets is 82.125\n"
+     ]
+    }
+   ],
+   "source": [
+    "grade_sum_list = []\n",
+    "student_amount = 0\n",
+    "total = 0\n",
+    "average_grade = 0\n",
+    "for i in students:\n",
+    "    if len(i[\"pets\"]) == 0:\n",
+    "\n",
+    "        student_amount += 1\n",
+    "        for j in i[\"grades\"]:\n",
+    "            total += j\n",
+    "            \n",
+    "        average_grade = total / 4\n",
+    "        \n",
+    "        grade_sum_list.append(average_grade)\n",
+    "        average_grade = 0\n",
+    "        total = 0\n",
+    "\n",
+    "\n",
+    "total = 0\n",
+    "print(grade_sum_list)\n",
+    "for i in grade_sum_list:\n",
+    "    total += i\n",
+    "    \n",
+    "print('the average grade for students with zero pets is',total / len(grade_sum_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "e3d6d2d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[78.5, 73.25, 81.5, 84.5, 82.5, 79.0, 89.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What is the average grade for web development students? data science students?\n",
+    "total = 0\n",
+    "avg_single_student = 0\n",
+    "the_list_of_averages_web_dev = []\n",
+    "for i in students:\n",
+    "    if i['course'] == 'web development':\n",
+    "        for j in i[\"grades\"]:\n",
+    "            total += j\n",
+    "        \n",
+    "        the_list_of_averages_web_dev.append(total / len(i[\"grades\"]))\n",
+    "        total = 0\n",
+    "        avg_single_student = 0\n",
+    "print(the_list_of_averages_web_dev)\n",
+    "#######finish me        "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e655f1f5",
+   "id": "5a2bb0d0",
    "metadata": {},
    "outputs": [],
    "source": []
